Import of VINSWORLD/Net-Frame-Layer-Syslog-1.03-w from CPAN.
gitpan-cpan-distribution: Net-Frame-Layer-Syslog
gitpan-cpan-version:      1.03-w
gitpan-cpan-path:         VINSWORLD/Net-Frame-Layer-Syslog-1.03-w.tar.gz
gitpan-cpan-author:       VINSWORLD
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-Frame-Layer-Syslog
-version:            1.02_1
+version:            1.03
 abstract:           Syslog layer object
 author:
     - Michael Vincent <vin at vinsworld dot com>
